--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,10 @@ body{
     color: var(--button-color);   
 }
 
+.mobile-menu .mobile-menu-item .webpage{
+    color: var(--button-color);   
+}
+
 .contacts{
     display: flex;
     align-items: center;
@@ -188,7 +192,7 @@ ul{
 }
 @media screen and (max-width: 412px) {
     .container {
-    width: 428px;
+    /* width: 428px; */
     margin-right: auto;
     margin-left: auto;
     }
@@ -197,6 +201,13 @@ ul{
 @media screen and (min-width: 413px) and (max-width: 767px){
     .container {
         width: 428px;
+        margin-right: auto;
+        margin-left: auto;
+        padding: 0 15px;
+    }
+
+    .header .container {
+        width: auto ;
         margin-right: auto;
         margin-left: auto;
         padding: 0 15px;
@@ -492,7 +503,7 @@ ul{
 }  
 
 .headline-title{
-    font-family: "roboto" sans-serif;
+    font-family: "roboto", sans-serif;
     color: var(--headline-title-color);
     font-weight: 700;
     font-size: 36px;
@@ -501,11 +512,51 @@ ul{
     margin-top: 0;
     margin-bottom: 72px;
 
-    width: 318px;
+   
     margin-left: auto;
-    margin-right: auto;
-    
+    margin-right: auto; 
 }
+
+@media screen and (max-width: 412px) {
+    .headline-title{
+        font-family: "roboto", sans-serif;
+        color: var(--headline-title-color);
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.1;
+        text-align: center;
+        margin-top: 0;
+        margin-bottom: 72px;
+          
+        margin-left: auto;
+        margin-right: auto; 
+    }
+}
+@media screen and (min-width: 413px) and (max-width: 767px){
+    .headline-title{
+        font-family: "roboto", sans-serif;
+        color: var(--headline-title-color);
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.1;
+        text-align: center;
+        margin-top: 0;
+        margin-bottom: 72px;
+       
+        margin-left: auto;
+        margin-right: auto; 
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px){
+    .headline-title {
+        margin-bottom: 40px;
+        width: 494px;
+        font-size: 56px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 
 @media screen and (min-width: 768px) {
     .headline-title {
@@ -777,13 +828,13 @@ ul{
 .characteristic{
     padding-top: 96px;
     padding-bottom: 96px;
-    width: 480px;
+    
 }
 @media screen and (min-width: 768px) {
     .characteristic{
         padding-top: 96px;
-        padding-bottom: 0;
-        width: 768px;
+        padding-bottom: 96px;
+       
         
     }
 }
@@ -792,7 +843,7 @@ ul{
     .characteristic{
         padding-top: 120px;
         padding-bottom: 0;
-        width: 1200px;
+        
     }
 }
 
@@ -873,9 +924,11 @@ ul{
     margin-bottom: 72px;   
 }
 @media screen and (min-width: 768px) {
-    .desc-list:not(:last-child){
-     margin-bottom: 72px;
+   
+    .desc-list:nth-last-child(-n + 2){
+        margin-bottom: 0; 
     }
+
 
     .desc-list:nth-child(2n+1){
     margin-right: 24px;
@@ -986,14 +1039,12 @@ ul{
 @media screen and (min-width: 768px) {
     .work-list{
     display: none;
-    width: 768px;  
     }
 }
 
 @media screen and (min-width: 1200px) {
     .work-list{
         display: flex;
-        width: 1158px;    
     }
 }
 
@@ -1028,13 +1079,18 @@ ul{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;  
-    letter-spacing: 0.02em;   
+    letter-spacing: 0.02em; 
+    color: var(--primary-text-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;  
 }
 @media screen and (min-width: 1200px) {
     .list-title .text{
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
+    color: var(--primary-text-color);  
     }
 }
 
@@ -1146,7 +1202,7 @@ ul{
 }
 
 .list-shadow:not(:last-child){
-    margin-top: 72px; 
+    /* margin-top: 72px;  */
     margin-bottom: 72px; 
 }
 
@@ -1167,6 +1223,24 @@ ul{
     margin-right: 82px;
 }
 
+@media screen and (max-width: 412px) {
+    .list-shadow {
+    margin-bottom: 0;
+    width: 264px;
+    margin-left: auto;
+    margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 413px) and (max-width: 767px){
+    .list-shadow {
+    margin-bottom: 0;
+    width: 264px;
+    margin-left: auto;
+    margin-right: auto;
+    }
+}
+
 @media screen and (min-width: 768px) {
     .list-shadow{
         margin-left: 0;
@@ -1184,8 +1258,38 @@ ul{
   }
 }
 
+@media screen and (max-width: 412px) {
+    .team-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media screen and (min-width: 413px) and (max-width: 767px){
+    .team-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+  
 .list-team .list li:not(:last-child){
     margin-right: 24px;
+}
+
+@media screen and (max-width: 412px) {
+    .list-team .list li:not(:last-child){
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 413px) and (max-width: 767px){
+    .list-team .list li:not(:last-child){
+        margin-right: auto;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1384,8 +1488,8 @@ ul{
         background: var(--title-text-color);
         padding-top: 100px;
         padding-bottom: 100px;
-        display: flex;
-        padding: 96px 0px;
+        /* display: flex;
+        padding: 96px 0px; */
     }
 }
 
@@ -1474,6 +1578,33 @@ ul{
     margin-bottom: 0;
     width: 264px;
 }
+@media screen and (max-width: 412px) {
+    .footer .title{
+    display: flex;
+    width: 268px;
+    margin-bottom: 72px;
+      
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+     }
+}
+
+@media screen and (min-width: 413px) and (max-width: 767px){
+    .footer .title{
+        display: flex;
+        width: 268px;
+        margin-bottom: 72px;
+          
+        justify-content: center;
+        align-items: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+
 
 .social-media {
     display: flex;
@@ -1490,22 +1621,34 @@ ul{
 @media screen and (min-width: 768px) {
     .social-media{
         justify-content: start;
-        
     }
 }
   
 @media screen and (min-width: 1200px) {
     .social-media{
         justify-content: start;
-        
     }
 }
 
 .content-social-media{
-    display: block;
-    margin: 0 80px 72px 80px;
-    width: 264px;
+    
+    /* margin: 0 80px 72px 80px;
+    width: 264px; */
 }
+
+@media screen and (max-width: 412px) {
+    .content-social-media{
+    margin-bottom: 72px;
+    }
+}
+
+@media screen and (min-width: 413px) and (max-width: 767px){
+    .content-social-media{
+    margin-bottom: 72px; 
+    }
+}
+  
+
 @media screen and (min-width: 768px) {
     .content-social-media{
         margin-left: auto;
@@ -1514,11 +1657,11 @@ ul{
     }
 }
 
-.media-logo{
+/* .media-logo{
     display: block;
-    margin: 0 80px 72px 80px;
-    width:264px;   
-}
+    margin: 0 0 72px 80px;
+    width: 264px;   
+} */
 @media screen and (min-width: 768px) {
     .media-logo{
         margin: 0;
@@ -1581,17 +1724,31 @@ ul{
 
 .icon-networks-media{
     display: flex;
-    margin-top: 16px;
     justify-content: center;   
 }
-@media screen and (min-width: 768px) {
-    .icon-networks-media{
-    justify-content: start;
+
+@media screen and (max-width: 412px) {
+    .icon-networks-media {
+        display: flex;
+    justify-content: center;     
     }
 }
+
+@media screen and (min-width: 413px) and (max-width: 767px){
+    .icon-networks-media{
+        justify-content: center;
+    }
+}
+  
+@media screen and (min-width: 768px) and (max-width: 1199px){
+    .icon-networks-media{
+        justify-content: start;
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .icon-networks-media{
-    justify-content: start;
+        justify-content: start;         
     }
 }
 
@@ -1620,7 +1777,7 @@ ul{
     background-color: inherit;
     padding-left: 16px;
     height: 40px;
-    width: 396px;
+    width: 100%;
     color: rgba(255, 255, 255, 0.6);
     line-height: calc(24/12);
     font-size: 12px;
@@ -1631,7 +1788,7 @@ ul{
     outline: none;
     transition: filter 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    margin: 0 16px 16px;
+    margin: 0 0 16px;
 }
 @media screen and (min-width: 768px) {
     .input-email{
@@ -1650,7 +1807,7 @@ ul{
     display: inline-flex;
     background-color: var(--button-color);
     color: #ffffff;
-    margin-left: 131px;
+   
     padding-top: 8px;
     padding-left: 24px;
     padding-right: 24px;
@@ -1666,14 +1823,40 @@ ul{
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 768px) {
-    .button-subscribe{
-        margin-left: 24px;
+
+.position-button-subscribe{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 412px) {
+    .position-button-subscribe{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
-@media screen and (min-width: 1200px) {
-    .button-subscribe{
+
+@media screen and (min-width: 413px) and (max-width: 767px){
+    .position-button-subscribe{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+  
+@media screen and (min-width: 768px) and (max-width: 1199px){
+    .position-button-subscribe{
         margin-left: 24px;
+        display: inline-flex;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .position-button-subscribe{
+        margin-left: 24px;
+        display: inline-flex;
     }
 }
 
@@ -1755,7 +1938,9 @@ ul{
     min-height: 48px;
     text-align: center;
     border: 1px solid var(--subtle-backgrounds);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color var(--headline-title-color), border 1px solid var(--button-color),
+    box-shadow 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .button:hover,
