--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,7 @@ ul{
 
 @media screen and (min-width: 413px) and (max-width: 767px){
     .container {
-        width: 428px;
+        max-width: 428px;
         margin-right: auto;
         margin-left: auto;
         padding: 0 15px;
@@ -216,7 +216,7 @@ ul{
   
 @media screen and (min-width: 768px) and (max-width: 1199px){
     .container {
-      width: 768px;
+      max-width: 768px;
       margin-right: auto;
       margin-left: auto;
     }
@@ -594,7 +594,7 @@ ul{
     pointer-events: none;
 }
 
-.modal{
+/* .modal{
     position: absolute;
     width: 408px;
     
@@ -606,6 +606,72 @@ ul{
     border-radius: 4px;
     
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
+
+
+@media screen and (max-width: 412px) {
+    .modal{
+        position: absolute;
+        max-width: 95vw;
+        max-height: 95vh;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        background: #FCFCFC;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+        
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+}
+@media screen and (min-width: 413px) and (max-width: 767px){
+    .modal{
+        position: absolute;
+        width: 408px;
+        
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        background: #FCFCFC;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+        
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px){
+    .modal{
+        position: absolute;
+        width: 408px;
+        
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        background: #FCFCFC;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+        
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+}
+
+
+@media screen and (min-width: 768px) {
+    .headline-title {
+        margin-bottom: 40px;
+        width: 494px;
+        font-size: 56px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+  
+@media screen and (min-width: 1200px) {
+    .headline-title {
+        margin-bottom: 48px;
+        width: 494px;
+        font-size: 56px;
+    }
 }
 
 .modal-button{
@@ -708,6 +774,17 @@ ul{
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);    
 }
 
+@media screen and (max-width: 412px) {
+    .form-field input{
+        width: 100%;
+        height: 40px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        padding-left: 38px;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);    
+    }
+}
+
 .name-span{
     position: relative;
 }
@@ -757,6 +834,24 @@ ul{
     padding-top: 8px;
     resize: none;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 412px) {
+    .textarea {
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        width: 360px;
+
+        font-size: 12px;
+        font-family: inherit;
+        line-height: calc(16 / 12);
+        letter-spacing: 0.04em;
+        height: 120px;
+        padding-left: 16px;
+        padding-top: 8px;
+        resize: none;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 .label{
@@ -2373,27 +2468,9 @@ ul{
     transition: transform 250ms ease-in-out;
 }
 
-@media screen and (max-width: 412px) {
-    .menu-container {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        background-color: #FFFFFF;
-        box-shadow: 0px 2px 1px rgb(46 47 66 / 8%), 0px 1px 1px rgb(46 47 66 / 16%), 0px 1px 6px rgb(46 47 66 / 8%);
-        top: 0;
-        left: 0;
-        z-index: 10;
-        overflow: auto;
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
-        transition: opacity 500ms linear, visibility 500ms linear;
-    } 
-}
-
  @media screen and (min-width: 413px) and (max-width: 767px){
     .menu-container {
-        position: fixed;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
