--- a/css/styles.css
+++ b/css/styles.css
@@ -1024,7 +1024,6 @@ ul{
         margin-bottom: 0; 
     }
 
-
     .desc-list:nth-child(2n+1){
     margin-right: 24px;
     }
@@ -1038,10 +1037,6 @@ ul{
         margin-right: 24px;
         margin-bottom: 0;   
     }
-}
-
-.desc-list{
-    /* width: calc((100% - 72px) / 4); */
 }
 
 @media screen and (min-width: 768px) {
@@ -1095,20 +1090,6 @@ ul{
     padding-top: 96px;
     padding-bottom: 96px; 
     /* width: 480px; */
-    
-    
-}
-
-@media screen and (max-width: 412px) {
-    .work {
-    
-    }
-}
-
-@media screen and (min-width: 413px) and (max-width: 767px){
-    .work {
-    
-    }
 }
   
 @media screen and (min-width: 768px) and (max-width: 1199px){
@@ -1118,7 +1099,6 @@ ul{
         padding-right: 108px
     }
 }
-
 @media screen and (min-width: 1200px) {
     .work{
         display: flex;
@@ -1197,19 +1177,13 @@ ul{
     
 }
 
-@media screen and (min-width: 768px) {
-    .list .text{
-        
-    }
-  }
-  
-  @media screen and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
     .list .text{
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     }
-  }
+}
 
 .container .title{
     margin-bottom: 8px;   
@@ -1408,14 +1382,12 @@ ul{
 @media screen and (min-width: 768px) {
     .content{
         padding: 32px 16px;
-       
     }
 }
   
   @media screen and (min-width: 1200px) {
     .content{
-        padding: 32px 16px;
-        
+        padding: 32px 16px;  
   }
 }
  
@@ -1463,7 +1435,7 @@ ul{
     height: 40px;
 }
 
-/* customers */
+/* =======customers =============*/
 .customers-icon{
     display: flex;
     justify-content: center;
@@ -1548,9 +1520,9 @@ ul{
     .customers:nth-last-child(-n + 3) {
         margin-bottom: 0;
       }
-  }
+}
   
-  @media screen and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
     .customers{
         width: calc((100% - 120px) / 6);
         margin: 0;
@@ -1561,10 +1533,10 @@ ul{
     .customers:not(:last-child){
         margin-right: 24px;
     }
-  }
+}
 
- .work-icon:hover,
- .work-icon:focus{
+.work-icon:hover,
+.work-icon:focus{
     border-color: #4D5AE5;
     fill: var(--button-color);
     color: var(--button-color);
@@ -1587,13 +1559,11 @@ ul{
         padding: 96px 0px; */
     }
 }
-
 @media screen and (min-width: 413px) and (max-width: 767px){
     .footer {
         padding: 96px 0px;
     }
 }
-  
 @media screen and (min-width: 768px) and (max-width: 1199px){
     .footer{
         padding-top: 96px;
@@ -1601,7 +1571,6 @@ ul{
         padding: 96px 0px;
     }
 }
-  
 @media screen and (min-width: 1200px) {
     .footer {
         padding-top: 100px;
@@ -1609,14 +1578,12 @@ ul{
         padding: 100px 0px; 
     }
 }
-
 @media screen and (max-width: 412px) {
     .footer .container {
         display: flex;
         flex-direction: column;
      }
 }
-
 @media screen and (min-width: 413px) and (max-width: 767px){
     .footer .container{
         display: flex;
@@ -1634,12 +1601,6 @@ ul{
     }
 }
   
-@media screen and (min-width: 1200px) {
-    .footer .container{
-        
-  }
-}
-
 .footer .logo{
     color: var(--footer-logo-color);
     font-family: Raleway, sans-serif ;
@@ -1699,8 +1660,6 @@ ul{
     }
 }
 
-
-
 .social-media {
     display: flex;
     color: #FFFFFF;
@@ -1723,12 +1682,6 @@ ul{
     .social-media{
         justify-content: start;
     }
-}
-
-.content-social-media{
-    
-    /* margin: 0 80px 72px 80px;
-    width: 264px; */
 }
 
 @media screen and (max-width: 412px) {
@@ -2243,13 +2196,6 @@ ul{
     }
 }
 
-/* .element li{
-    width: 360px;
-    margin-right: 24px;
-    margin-bottom: 48px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
-
 @media screen and (max-width: 412px) {
     .element li{
         margin-bottom: 48px;
@@ -2293,10 +2239,6 @@ ul{
     padding: 32px 16px 32px 16px;
     padding-bottom: 32px;
 }
-
-/* .picture{
-   
-} */
 
 @media screen and (max-width: 412px) {
     .picture {
