--- a/css/styles.css
+++ b/css/styles.css
@@ -584,7 +584,7 @@ ul{
     pointer-events: none;
 }
 
-/* .modal{
+.modal{
     position: absolute;
     width: 408px;
     
@@ -596,7 +596,7 @@ ul{
     border-radius: 4px;
     
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
 
 
 @media screen and (max-width: 412px) {
